--- a/view_style.css
+++ b/view_style.css
@@ -2,7 +2,7 @@
 <!--
 body { font-family: verdana, arial;
 	font-size:9pt;
-	background-color: darkblue;
+	background-color: blue;
         color: black}
  H1   {font-size:18pt;
 	font-family:verdana,arial}
