--- a/menu_style.css
+++ b/menu_style.css
@@ -1,13 +1,10 @@
-<style>
-<!--
 body {font-family: verdana, arial;
        background-color: darkblue;
        font-size:9pt;
-       color: black}
+       color: white}
  a.nav {font-family: verdana, sserife, arial;
        font-size:12pt;
-	color: black}
+	color: white}
  a.subnav {font-family: sserife, verdana, arial;
         font-size:8pt;
-	color: black}
-</style>
+	color: white}
