--- a/view_style.css
+++ b/view_style.css
@@ -11,7 +11,7 @@ body { font-family: verdana, arial;
 	font-family:verdana,arial}
  td   {font-size:10pt;
 	font-family:verdana,arial;
-	color: black}
+	color: white}
  th   {font-size:10pt;
 	font-family:verdana,arial;
 	color: white}
